# utxo-as-a-service

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Python_Dockerfile  README.md  Rust_Dockerfile  build.sh  connectdb.sh  docker-compose.yml  lint.sh  multi-build.sh  out.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  run_service.sh  run_web.sh  rundb.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: bnar.toml  dynamic.toml  uaasr.docker.toml  uaasr.toml
docker/mariadb/: 99-uaas.cnf
docs/: Configuration.md  Database.md  Development.md  Project.md  Security.md  SystemsRequirements.md
docs/diagrams/: config_structure.puml  deployment.puml  getheader.puml  products.puml  service_structure.puml  threadstates.puml  usecase.puml
docs/diagrams/noc/: noc.puml  noc_use_cases.puml
docs/diagrams/sv/: net_h.puml  protocol_h.puml
init_database/: 01_init.sql  02_ensure_grants.sql  03_performance_indexes.sql
python/src/: address_manager.py  block_manager.py  blockfile.py  collection.py  config.py  database.py  logic.py  merkle.py  merkle_block.py  merkleblock.py  rate_limit.py  rest_api.py  timer.py  truncate_blocks.py  tx_analyser.py  util.py  validation.py  web.py
python/src/p2p_framework/: README.md  consensus.py  hash.py  merkle.py  message.py  network_thread.py  node_callbacks.py  node_connection.py  object.py  serial.py  streams.py  util.py
python/src/tools/: README.md  fix_block_file.py  fix_height_block_table.py  load_block.py  load_blocks.py  merkle_verifier.py  show_blocks.py
python/tests/: conftest.py  test_block_manager.py  test_blockfile.py  test_ci.py  test_collection.py  test_config.py  test_database.py  test_deployment.py  test_logic.py  test_merkle.py  test_rate_limit.py  test_requirements_source.py  test_rest_api_smoke.py  test_tx_analyser.py  test_util.py  test_validation.py
python/tests/integration/: conftest.py  helpers.py  test_database_integration.py  test_mempool_integration.py  test_rest_api_integration.py  test_system_requirements.py  test_tx_analyser_integration.py
rust/: Cargo.toml
rust/data/: bnar.toml
rust/src/: config.rs  connect_to_peer.rs  dynamic_config.rs  event_handler.rs  main.rs  peer.rs  peer_connection.rs  peer_event.rs  peer_thread.rs  rate_limit.rs  rest_api.rs  services.rs  thread_manager.rs  thread_tracker.rs  thread_util.rs
rust/src/uaas/: address_manager.rs  block_manager.rs  collection.rs  connection.rs  database.rs  hexslice.rs  logic.rs  mod.rs  schema.rs  tx_analyser.rs  txdb.rs  util.rs  utxo.rs
src/: config.rs  event_handler.rs  main.rs  peer.rs  thread_tracker.rs
