[project]
name = "uaas-web"
version = "1.3.0"
description = "UTXO as a Service Python REST API"
requires-python = ">=3.12"
dependencies = [
    "toml==0.10.2",
    "fastapi==0.136.3",
    "fastapi-utils==0.8.0",
    "uvicorn[standard]==0.49.0",
    "mysql-connector-python==9.7.0",
    "requests==2.34.2",
]

[dependency-groups]
dev = [
    "flake8==7.3.0",
    "mypy==2.1.0",
    "docker==7.1.0",
    "pytest==9.1.0",
    "httpx==0.28.1",
    "types-toml==0.10.8.20260518",
    "types-requests==2.33.0.20260518",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring MariaDB (set UAAS_TEST_MYSQL_URL)",
]
testpaths = ["python/tests"]
