[package]
name = "uaas"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chain-gang = { git = "https://github.com/nchain-innovation/chain-gang.git" }

serde = { version = "1.0.228", features =["derive"] }
toml = "0.9.12"
lazy_static = "1.5.0"
serde_json = "1.0.150"
mysql = "28.0.0"
chrono = "0.4.44"
rand = "0.9.4"
hex = "0.4.3"
regex = "1.12.3"
retry = "2.2.0"
actix-web = "4.13.0"
tokio = { version = "1.52", features = ["signal", "macros"] }
log = { version = "0.4.30", features = ["max_level_trace", "release_max_level_warn"] }
simple_logger = "5.2.0"
anyhow = "1.0.102"

[features]
# Introduce random orphans into the download stream
rnd_orphans = []
